kubernetes/frontendproxy/oldingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: otel.local
      http:
        paths:
          - path: "/frontend"
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-demo-frontend
                port:
                  number: 8080
